# 16-bit-virtual-gameboy

./: .clang-format  .gitignore  .readthedocs.yaml  README.md  syntax.json
.github/workflows/: ci.yml
O#/: build.sh  main.c
O#/headers/: O#_codegenerator.h  O#_lexer.h  O#_parser.h
O#/src/: O#_codegenerator.c  O#_lexer.c  O#_parser.c
extras/samplePrograms/: DemoProgram.osh  binarySearch.dot  binarySearch.sasm  calls.dot  calls.smh  fibonacci.pblasm  helloWorld.dot  helloWorld.sasm  helloWorld.sm  test.dot  test.sasm  test.sm  tmp.sm  try-run-all-instructions.sasm
gbvm/: CMakeLists.txt  Makefile  occ.c
gbvm/O/headers/: O_TAC_Oper.h  O_codegenerator.h  O_debug_help.h  O_inter_code_optimizer.h  O_inter_codegen.h
gbvm/O/src/: O_inter_code_optimizer.c  O_lexer.c
gbvm/SASM/headers/: sasm_assembler.h
gbvm/SASM/src/: sasm_ast.c
gbvm/VM/: main.c
gbvm/libs/src/: univ_malloc.c
samplePrograms/: FirstProgram.osh  fibonacci.pbl
vscode_extensions/sasm_syntax_highlight/: CHANGELOG.md  README.md  language-configuration.json  package.json
vscode_extensions/sasm_syntax_highlight/syntaxes/: sasm.tmLanguage.json
vscode_extensions/sasm_syntax_highlight/themes/: SASM-color-theme.json
